# publicip

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
publicip/: __init__.py  cli.py  resolver.py
publicip/formatters/: __init__.py  base.py  json_fmt.py  plain.py
publicip/providers/: __init__.py  base.py  icanhazip.py  identme.py  ipify.py  seeip.py
tests/: test_cli.py  test_formatters.py  test_providers.py  test_resolver.py
