[project]
name = "publicip-cli"
version = "0.1.1"
description = "A command-line utility to determine your internet-facing public IP address"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Andre Van Klaveren", email = "andre.vanklaveren@owasp.org" }]
keywords = ["ip", "network", "cli", "public-ip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
publicip = "publicip.cli:main"

[project.urls]
Homepage = "https://github.com/opratr/publicip"
Repository = "https://github.com/opratr/publicip"
Issues = "https://github.com/opratr/publicip/issues"
Changelog = "https://github.com/opratr/publicip/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "mypy>=2.1.0",
    "ruff>=0.15.14",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["publicip"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
